charts/gateway/gateway.yml
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: budget-tracker-gateway
# spec:
#   selector:
#     istio: ingressgateway # use Istio default gateway implementation
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - dev.demo.com

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: budget-tracker-gateway
  namespace: budget-tracker
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
    - dev.demo.com
